# esp32-desktop-companion

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
app/: CMakeLists.txt  app_fonts.c  app_fonts.h  app_main.c
app/apps/clock/: clock_app.c  clock_app.h
app/apps/clock/pages/: clock_ui_common.c  clock_ui_common.h  page_alarm_edit.c  page_alarm_edit.h  page_alarms.c  page_alarms.h  page_stopwatch.c  page_stopwatch.h  page_timer.c  page_timer.h  page_world.c  page_world.h
app/apps/dynapp_host/: dynapp_host_app.c  dynapp_host_app.h
app/apps/dynapp_host/pages/: page_dynapp_host.c  page_dynapp_host.h
app/apps/launcher/: launcher_app.c  launcher_app.h
app/apps/launcher/pages/: launcher_modal.c  launcher_modal.h  page_launcher.c  page_launcher.h
app/apps/lockscreen/: lockscreen_app.c  lockscreen_app.h
app/apps/lockscreen/pages/: page_lockscreen.c  page_lockscreen.h
app/apps/music/: music_app.c  music_app.h
app/apps/music/pages/: page_music.c  page_music.h  page_music_detail.c  page_music_detail.h  page_music_list.c  page_music_list.h
app/apps/notifications/: notifications_app.c  notifications_app.h
app/apps/notifications/pages/: page_notifications.c  page_notifications.h
app/apps/settings/: settings_app.c  settings_app.h
app/apps/settings/pages/: settings_about.c  settings_about.h  settings_bluetooth.c  settings_bluetooth.h  settings_display.c  settings_display.h  settings_home.c  settings_home.h  settings_time.c  settings_time.h
app/apps/system/: system_app.c  system_app.h
app/apps/system/pages/: page_system.c  page_system.h  page_system_device.c  page_system_device.h  page_system_pc.c  page_system_pc.h  system_ui_common.c  system_ui_common.h
app/apps/weather/: weather_app.c  weather_app.h
app/apps/weather/pages/: page_weather.c  page_weather.h
app/pages/: page_about.c  page_menu.c  page_settings.c  page_settings.h  page_time_adjust.c
app/ui/: app_shell_ui.c  app_shell_ui.h  ui_statusbar.c  ui_statusbar.h  ui_widgets.c  ui_widgets.h
docs/: README.md  动态app_BLE联机五子棋_工作日志.md  动态app_JS_API速查.md  动态app_UI设计系统.md  动态app_包格式规范.md  原生App统一改造_音乐双页_系统圆盘_设置扩充_时钟全新_桌面伴侣音乐管理_工作日志.md  项目深度分析报告_2026-05-05.md
docs/参考/: 动态app_JS_API速查.md  动态app_UI设计系统.md  动态app双端通信协议.md  动态app开发者指南.md
docs/日志/: 2026-04-17_驱动移植与LVGL集成.md  2026-04-18_BLE集成.md  2026-04-18_NVS持久化.md  2026-04-18_通知服务与GUI重构.md  2026-04-19_BLE桌面伴侣.md  2026-04-19_中文字体集成.md  2026-04-20_锁屏重构与反向请求.md  2026-04-21_Trellis工作流适配.md  2026-04-21_control_service退役.md  2026-04-21_services分层与依赖反转.md  2026-04-21_反向请求模式重构.md  2026-04-23_动态App_Label自注册.md  2026-04-23_动态App_Layer1控件Layer2事件.md  2026-04-23_动态App_MVP代码注释.md  2026-04-23_动态App_MVP构建说明.md  2026-04-23_动态App_MVP设计.md  2026-04-24_动态App_VDOM三阶段.md  2026-04-24_动态App_模块重构.md  2026-04-25_动态App_手势框架与销毁API.md  2026-04-26_动态App_Diff持久化与多App共存.md  2026-04-26_动态App_平台化与渲染瞬切.md  2026-04-27_动态App_prelude抽取.md  2026-04-28_动态App_LittleFS与BLE上传.md  2026-04-28_动态App_hello全链路与Registry.md  2026-04-28_动态App_图片Assets与目录上传.md  2026-04-29_PC端BLE工具链统一重构.md  2026-04-30_UI设计系统_Weather与Menu美化.md  2026-04-30_动态App_App文件夹布局重构.md  2026-05-01_App与Page彻底分家.md  2026-05-01_通知App重构_状态栏与模态详情.md  2026-05-02_动态App_PC端插件化重构.md  2026-05-02_动态App_UI能力升级与iOS设计.md  2026-05-02_动态App_上传链路清理与TTF图标.md  2026-05-02_动态App_多级Router.md  2026-05-02_动态App_离线消息与canvas涂鸦板.md  2026-05-03_PC端边界整理与压力测试.md  2026-05-04_Marketplace集成.md
docs/架构/: App接口能力分析.md  BLE服务扩展可行性分析.md  PC端插件化重构规划.md  三层架构图.md  多线程边界分析.md  渲染速度优化方案.md
dynamic_app/: dynamic_app.c  dynamic_app_natives.c  dynamic_app_registry.c  dynamic_app_registry.h  dynamic_app_ui.h  dynamic_app_ui_styles.c
dynamic_app/scripts/: prelude.js
framework/: CMakeLists.txt  app_router.c  app_router.h  page_router.h  sub_router.c  sub_router.h
main/: main.c
services/: CMakeLists.txt  dynapp_bridge_service.c  dynapp_bridge_service.h  media_service.c  media_service.h
services/manager/: battery_sim.c  battery_sim.h  device_stats.c  device_stats.h  dynapp_mailbox.c  dynapp_mailbox.h  media_manager.h  playlist_manager.c  playlist_manager.h
storage/littlefs/: dynapp_script_store.c  dynapp_script_store.h
tools/: README.md  gen_icons_subset.py  make_pack_manifest.py  requirements.txt
tools/companion/: __main__.py  config.py  constants.py
tools/dynapp_uploader/: __init__.py  client.py
tools/plugins/: README.md
tools/scripts/: _subset_chars.txt  gen_font_subset.py  gen_icons_subset.py  make_pack_manifest.py  patch_esp_mquickjs_component.py
ui_mockups/clock/: v1.html
ui_mockups/menu/: v1.html  v2.html
ui_mockups/music/: v1.html
ui_mockups/settings/: v1.html  v2.html
ui_mockups/system/: v1.html
(+46 files in other folders)
