idf_component_register(
    SRCS
        "app_main.c"
        "app_fonts.c"
        "weather_icons.c"
        # UI 设计系统（token + widgets + anim）
        "ui/ui_widgets.c"
        "ui/ui_anim.c"
        "ui/ui_statusbar.c"
        "pages/page_time.c"
        "pages/page_time_adjust.c"
        "pages/page_menu.c"
        "pages/page_menu_modal.c"
        "pages/page_about.c"
        "pages/page_settings.c"
        "pages/page_weather.c"
        "pages/page_notifications.c"
        "pages/page_music.c"
        "pages/page_system.c"
        # Dynamic App（MicroQuickJS MVP）演示页
        "pages/page_dynamic_app.c"
    INCLUDE_DIRS
        "."
        "ui"
    EMBED_FILES
        "fonts/srhs_sc_subset.ttf"
        "fonts/material_icons_subset.ttf"
        "icons/ic_clear.bin"
        "icons/ic_cloudy.bin"
        "icons/ic_overcast.bin"
        "icons/ic_rain.bin"
        "icons/ic_snow.bin"
        "icons/ic_fog.bin"
        "icons/ic_thunder.bin"
        "icons/ic_unknown.bin"
    REQUIRES
        framework
        drivers
        services
        storage
        # dynamic_app 组件：脚本运行时 + Script->UI 队列桥接
        dynamic_app
        lvgl
)
